2006-11-30  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* config/configure.ac: Version is 3.9-10.

	* config/configure.ac (ext_plugins): add VideoForLinuxPlugin.

	* plugins/VideoForLinuxPlugin: Added.

	* vm-sound-ALSA/sqUnixSoundALSA.c: Save and restore SIGIO
	handler (since ALSA doesn't bother to restore it correctly).

	* vm/sqGnu.h: Don't assign register vars on Darwin-i386.

2006-10-13  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* vm-sound-ALSA/sqUnixSoundALSA.c: Prepare output_handle after
	snd_pcm_avail_update failure.

	* vm-display-Quartz/sqUnixQuartz.m: Disable spin lock on non-PPC
	arch.

2006-10-10  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* vm/sqUnixMain.c: Linux sounds defaults to ALSA.

	* vm/sqUnixCharConv.c: Solaris uses "iso5" external charset.

	* vm-sound-ALSA/sqUnixSoundALSA.c: Implement mixer functions.

	* vm/sqUnixMain.c: -nomixer is no longer deprecated.

	* vm/sqUnixMain.c: PATH_MAX -> MAXPATHLEN.

	* vm/aio.c: If O_ASYNC missing try on FASYNC followed by FIOASYNC.

2006-09-21  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* vm-sound-ALSA/sqUnixSoundALSA.c (sound_Start): EPIPE is not a
	fatal error suring sound startup.

2006-09-19  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* plugins/SecurityPlugin/sqUnixSecurity.c (ioInitSecurity): Set
	secure directory from SQUEAK_SECUREDIR if set, otherwise
	implicitly from image path.

2006-09-18  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* npsqueak/Makefile (npsqueak.so): Delete target before making
	hard link to libtool output file.

	* config/Makefile.install (install-doc): Ignore errors when
	compressing documentation.

2006-09-17  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* vm-sound-ALSA: Add support for ALSA sound output.

	* vm-display-X11/sqUnixX11.c: Only refer to completions and
	useXshm when USE_XSHM defined.
